--- a/src/app.css
+++ b/src/app.css
@@ -41,7 +41,11 @@ body {
   }
   
   .cg-btn {
-	@apply inline-block rounded-md border-2 border-black px-3 py-1 text-black hover:bg-gray-200 hover:text-black;
+	@apply inline-block rounded-md border-2 border-orange-400 px-3 py-1 text-orange-400 hover:bg-gray-200 hover:text-orange-700 hover:border-orange-700;
+  }
+
+  .grid-meme {
+	@apply  border-orange-400 px-3 py-1 text-black hover:bg-gray-200 hover:text-black hover:border-orange-700
   }
   
   .background-animate {
